fixed image not showing up

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .background-img {
-    background-image: url('/public/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
+    background-image: url('/the-quote-card-express/public/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
